-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.11.0
-
None
-
macOS 10.15.2 Catalina
-
-
82d830e5d80aa0dce5538dd3f87d69e7a1269de0 92a39e8d86862fba847791954c6d54b91d4d779e (qt-creator/qt-creator/4.11)
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.CoreFoundation 0x00007fff3632bdcc CFStringGetLength + 6 1 libIos.dylib 0x000000010e418b40 CFStringRef2QString(__CFString const*) + 48 2 libIos.dylib 0x000000010e41856b deviceConnectedCallback + 475 3 com.apple.framework.IOKit 0x00007fff3912bbef IODispatchCalloutFromCFMessage + 176 4 com.apple.CoreFoundation 0x00007fff363d6a7b __CFMachPortPerform + 288 5 com.apple.CoreFoundation 0x00007fff363a80bf __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE1_PERFORM_FUNCTION__ + 41 6 com.apple.CoreFoundation 0x00007fff363a800f __CFRunLoopDoSource1 + 541 7 com.apple.CoreFoundation 0x00007fff363a6c7c __CFRunLoopRun + 2612 8 com.apple.CoreFoundation 0x00007fff363a5bd3 CFRunLoopRunSpecific + 499 9 com.apple.HIToolbox 0x00007fff34efc65d RunCurrentEventLoopInMode + 292 10 com.apple.HIToolbox 0x00007fff34efc2a9 ReceiveNextEventCommon + 356 11 com.apple.HIToolbox 0x00007fff34efc127 _BlockUntilNextEventMatchingListInModeWithFilter + 64 12 com.apple.AppKit 0x00007fff3356deb4 _DPSNextEvent + 990 13 com.apple.AppKit 0x00007fff3356c690 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 1352 14 com.apple.AppKit 0x00007fff3355e3ae -[NSApplication run] + 658 15 libqcocoa.dylib 0x00000001043b6773 0x104380000 + 223091 16 org.qt-project.QtCore 0x0000000101e5c99f QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 431 17 org.qt-project.QtCore 0x0000000101e60f22 QCoreApplication::exec() + 130 18 org.qt-project.qtcreator 0x0000000100be2036 main + 15046 19 libdyld.dylib 0x00007fff6da027fd start + 1
For Gerrit Dashboard: QTCREATORBUG-23460 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
286601,2 | iOS: Guard against failure to retrieve device UID | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
286835,2 | iOS: Fix retrieving USB serial number with macOS 10.15 SDK | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |