iOS: Guard against failure to retrieve device UID

It should not happen, but if it happens, Qt Creator should not crash.

Task-number: QTCREATORBUG-23460
Change-Id: Id25b53ff24d7e1726efc344dc6318c32073ee75c
Reviewed-by: Vikas Pachdha <vikas.pachdha@qt.io>